# RC.10
  - Added a small background scrim on the Metrics beneath the Heading
  - Harmonized the colors a bit better
  - Removed the 1px transparent border from Panels
  - Adjusted the font sizing and padding for Panels
  - Removed forced uppercase and bold for panel headers
  - Lightened the metric panel graph color
  - Default the side nave to a light gray color for link text
  - Standardized on ordinary Helvetica for mostly all heades, introduced $font-family-sans-serif-light
  - Navbar dropdown toggle icons light up white properly