@@ -10,7 +10,7 @@ $brand-primary: color($blue, 600);
 
 
 // Typography
-$text-color:            desaturate(darken($brand-primary, 5%), 30%);
+$text-color:            desaturate(darken($brand-primary, 25%), 40%);
 $quietColor:            #A6BDC5;
 $altTextColor:          #1FAFE7;
 $altBackgroundColor:    #d0ab5f;
