@@ -135,6 +135,7 @@
 @import "dresssed/app_pages/user-settings";
 @import "dresssed/app_pages/timeline";
 @import "dresssed/app_pages/user-profile";
+@import "dresssed/landing_pages";
 
 // Font Awesome
 @import "font_awesome/font-awesome";
